# wasserfang

./: .gitignore  README.md  main.kv  main.py  pyproject.toml  test.py  test_OLD.py
core/: config.py
gui/: window.py
schema/: input.py  manager.py  output.py  time.py
services/: scan.py  scanning_area.py  time.py  update.py  worker.py
utils/: image.py  process.py
